# mobiofp

./: .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  requirements.txt  setup.cfg
fpctl/: cli.py  dataset.py  feature.py  fingerprint.py  fingertip.py  quality.py
mobiofp/: __init__.py  api.py  background.py  cli.py  dataset.py  detection.py  feature.py  fingertip.py  iqa.py  minutiae.py  models.py  plot.py  segmentation.py  template.py  unet.py  utils.py
mobiofp/scripts/: fingerphoto_detector.py  fingerphoto_segmenter.py  yolo_dataset_creator.py
notebooks/: 00_rl_object_detection_training.ipynb  00_rl_semantic_segmentation_training.ipynb  00_rl_unet_segmentation_training.ipynb  01-rl-fingertip-segmentation-unet-archived.ipynb  01-rl-fingertip-segmentation-unet.ipynb  01_rl_fingerphoto_recognition_fingertip_detection.ipynb  01_rl_fingerphoto_recognition_fingertip_segmentation.ipynb  01_rl_fingerphoto_recognition_obj.ipynb  01_rl_fingerphoto_recognition_object_detection.ipynb  01_rl_fingerphoto_recognition_seg.ipynb  01_rl_fingerphoto_recognition_semantic_segmentation.ipynb  01_rl_fingerphoto_recognition_unet.ipynb  01_rl_fingerphoto_recognition_yolo.ipynb  01_rl_fingertip_detection_obj.ipynb  01_rl_fingertip_detection_seg.ipynb  01_rl_object_detection_YOLOv8.ipynb  02-rl-enhancement.ipynb  02_quality_score.ipynb  02_rl_enhancement.ipynb  02_rl_feature_matching.ipynb  02_rl_features_matching.ipynb  02_rl_fingerphoto_obj_iqa.ipynb  02_rl_fingertip_image_quality_assessment.ipynb  02_rl_fingertip_iqa.ipynb  02_rl_iqa_fingertip_enhancement.ipynb  02_rl_minutiae_matching.ipynb  02_rl_sematic_segmentation_unet297.ipynb  03_rl_features_matching.ipynb  04_rl_demo_with_object_detection.ipynb  04_rl_demo_with_semantic_segmentation.ipynb  04_rl_feature_matching.ipynb  04_rl_fingerphoto_recognition_objdetect.ipynb  04_rl_fingerphoto_recognition_semseg.ipynb  common.py  shared.py
scripts/: create_dataset_detection.py  enhancement.py  extract_features.py  extract_minutiae.py  fingertip_detection.py  fingertip_segmentation.py  superglue_evaluation.py  superglue_pairs_generator.py
