[metadata]
name = mobiofp
version = 0.1.0
author = Marco Rotiroti, Emanuele Leone
description = Mobile Biometrics Fingerphoto
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keywords = mobile, biometrics, fingerprint, fingerphoto, deep-learning, computer-vision, U-Net
url = https://github.com/rotiroti/mobiofp
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.9
packages = mobiofp
install_requires =
    albumentations
    fingerprint_enhancer
    fingerprint_feature_extractor
    imutils
    ipykernel
    ipyfilechooser
    matplotlib
    numpy
    opencv-python
    rembg
    scikit-learn
    tensorflow
    ultralytics
